# PhotoBooth

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  settings.toml  tasks.py
PhotoBooth/: main.py  main.qml
PhotoBooth/backend/: backend.py
PhotoBooth/utils/: qml.py
PhotoBooth/view/qml/: Webcam.qml  main.qml  qmldir
photobooth/: __init__.py  main.py  overlay.py
photobooth/backend/: backend.py
photobooth/utils/: config.py  qml.py
photobooth/view/qml/: Main.qml  UiData.qml  Webcam.qml  Yesno.qml  qmldir
src/photobooth/: .qrc  main.py  printer.py
src/photobooth/backend/: backend.py
src/photobooth/utils/: qml.py  toml_config.py
src/photobooth/view/qml/: Main.qml  Webcam.qml  Yesno.qml
